--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,32 +1,12 @@
-<header class="box-one">
+
+<header class="box-one" >
   <nav>
     <ul class="menu-horizontal">
-      <li><a href="#">Inicio</a></li>
-      <li><a href="#">Plataformas</a></li>
-      <li><a href="#">Sobre Nosotros</a></li>
-      <li><a href="#">Contacto</a></li>
+      <li><a  routerLinkActive="active" href="/inicio">Inicio</a></li>
+      <li><a  routerLinkActive="active" href="/plataforma">Plataformas</a></li>
+      <li><a  routerLinkActive="active" href="/sobreNosotros">Sobre Nosotros</a></li>
+      <li><a  routerLinkActive="active" href="/contacto">Contacto</a></li>
     </ul>
   </nav>
 </header>
 
-<img class="div1" width="100%" src="https://feedzai.com/aptopees/2022/03/Twitter_Retail_Banks_SP.jpg"
-  alt="Descripción de la imagen">
-
-
-<div style="height: 200px; overflow: hidden;position: sticky; "><svg viewBox="0 0 500 150" preserveAspectRatio="none"
-    style="height: 100%; width: 100%;">
-    <path d="M-3.10,-3.61 C79.85,148.34 340.57,127.63 500.84,125.64 L500.00,150.00 L0.00,150.00 Z"
-      style="stroke: none; fill: rgb(255, 255, 255);">
-    </path>
-  </svg></div>
-
-<div class="contenedor div1">
-  <p class="elemento">Mi contenido centrado</p>
-
-</div>
-
-
-
-<div class="EJM1">
-  <p class="elemento">holaaaaa</p>
-</div>
